--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Baai Mart</h1>
+        <h1>Baai <span style="color: rgb(251, 169, 18);">Mart</span></h1>
         <input type="text" id="search-bar" onkeyup="filterProducts()" placeholder="Search for products...">
     </header>
 
